<resources>
    <string name="app_name">GojekTestJava</string>
    <string name="title">Trending</string>
    <string name="avatar">avatar</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="error_title">Something went wrong..</string>
    <string name="error_msg">An alien is probably blocking your signal.</string>
    <string name="loading">Loading..</string>

    <string name="value_format">%,d</string>
</resources>
